--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"react-spring": "^9.5.0",
 		"socket.io-client": "^4.5.1",
 		"styled-components": "^5.3.5",
+		"tippy.js": "^6.3.7",
 		"uuid": "^8.3.2",
 		"web-vitals": "^2.1.4"
 	},
@@ -43,6 +44,5 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	},
-	"proxy": "https://battleship-server-irad.herokuapp.com/"
+	}
 }
